# embassy-boot-stm32f4

./: Cargo.toml  README.md
crates/applications/: Cargo.toml  build.rs  build_b.sh  memory.x
crates/applications/.cargo/: config.toml
crates/bootloader/: Cargo.toml  memory.x
crates/bootloader/.cargo/: config.toml
crates/bootloader/src/: main.rs
