[package]
name = "applications"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false } 
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-embedded-hal = "0.3.0"
embassy-executor = { version= "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-futures = "0.1.1"
embassy-boot-stm32 = { version = "0.2.0" , features = []}
embassy-boot = { version = "0.4.0" , features = []}
embassy-stm32 = { version = "0.2.0", features = ["unstable-pac", "time-driver-any", "exti", "stm32f401re"] }
embassy-time = "0.4.0"
embassy-sync = "0.6.1"
embassy-time-driver = { version = "0.2.0" }
static_cell = "2.1.0"
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"
panic-probe = "0.3.2"
embedded-hal-async = "1.0.0"
embedded-storage-async = "0.4.1"

